--- a/src/scss/components/_modal-tabbed.scss
+++ b/src/scss/components/_modal-tabbed.scss
@@ -1,6 +1,9 @@
 .modal-tabbed {
     width: 80rem;
     border-radius: .3rem;
+    max-width: 100%;
+    margin: 0 auto;
+    margin-bottom: 1rem;
     &__header {
         padding: 0 1.5rem;
         background-image: $gr1;
@@ -16,6 +19,13 @@
         text-indent: -9999px;
         background-image: url(../img/close-popup.svg);
         background-size: cover;
+        
+        @media(max-width: $sm * 1em) {
+            top:2rem;
+            right:2rem;
+        }
+        
+        
     }
     &__btn {
         font-size: 1.3rem;
@@ -27,14 +37,28 @@
         &:not(:last-child) {
             margin-right: 2.5rem;
         }
+        
         &[aria-selected='true'] {
             font-weight: 500;
             border-bottom: .3rem solid $c11;
         }
+        @media(max-width: $sm * 1em) {
+            height:5.6rem;    
+            
+            &:not(:last-child) {
+                margin-right: 3rem;
+            }
+            
+            span {
+                font-size: 0px;
+            }
+        }
     }
     &__ico {
         display: none;
-        margin-right: 1rem;
+        @media(min-width: $sm * 1em) {
+            margin-right: 1rem;
+        }
     }
     &__tab {
         display: none;
@@ -43,11 +67,13 @@
         &[aria-hidden='false'] {
             display: block;
         }
-    }
-    @media(min-width: $sm * 1em) {
-        &__ico {
-            display: block;
+        
+        @media(max-width: $sm * 1em) {
+            padding:3rem 4rem 4rem 4rem;
         }
+    }
+    &__ico {
+        display: block;
     }
     @media(min-width: $md * 1em) {
         &__header {
