--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -168,6 +168,11 @@ ul {
     height: 100%;
 }
 
+.modal-open{
+    overflow: hidden;
+    position: fixed;
+}
+
 .modal {
     position: fixed;
     width: 100%;
@@ -178,9 +183,31 @@ ul {
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: auto;
+
+    @media(max-width: $sm * 1em) {
+        padding:1rem;
+    }
+    
     &--hidden {
         display: none;
+    }
+}
+
+.modal-container{
+    position: absolute;
+    border-radius: .3rem;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    padding:1rem;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    @media(max-width: $sm * 1em) {
+        display: block;
     }
 }
 
